--- a/style/project-style.css
+++ b/style/project-style.css
@@ -48,7 +48,6 @@ body {
 }
 
 /*NAVIGATION*/
-
 #sidebar-nav {
     position: fixed;
     right: -200px;
@@ -134,8 +133,12 @@ body {
     height: 75px;/*x1,5*/
 }
 
+#navbar .left-nav-container a:hover {
+    cursor: pointer;
+}
+
 #navbar .left-nav-container img {
-    height:inherit;
+    height: inherit;
 }
 
 #navbar .hamburger-button {
@@ -149,14 +152,37 @@ body {
     height: inherit;
 }
 
-
 #navbar .hamburger-button:hover {
     cursor: pointer;
     background-color: var(--highlight);
 }
 
-/*PAGE SPECIFIC*/
+#clown-nose {
+    position: fixed;
+    left: -13px;
+    top: 32px;
+    width: auto;
+    height: auto;
+    background: none;
+    z-index: 10;
 
+    transition: all ease-in-out 250ms;
+}
+
+#clown-nose:hover {
+    cursor: pointer;
+}
+
+
+#clown-nose img {
+    height: 13px;
+}
+
+#clown-nose.nose-shown {
+    left: 35px;
+}
+
+/*PAGE SPECIFIC*/
 .page-nav {
 }
 
@@ -168,9 +194,6 @@ body {
 .arrow-button:hover {
     cursor: pointer;
 }
-
-/* .arrow-button:hover img {
-} */
 
 .arrow-button img {
     width: 40px;
@@ -195,11 +218,6 @@ body {
 }
 
 /* IMPORTANT CLASSES */
-
 .hidden {
     display: none;
-}
-
-#sidebar-nav.sidebar-shown {
-    right: 0px;
 }
